--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
     "nodemon": "^3.0.2",
     "path": "^0.12.7",
     "toastify-js": "^1.12.0"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
